# typhoon

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
benches/: BENCHMARK.md
benches/program-bench/: Cargo.toml
benches/program-bench/benches/: bench.rs
benches/program-bench/benches/programs/: Cargo.toml
benches/program-bench/benches/programs/anchor/: Cargo.toml
benches/program-bench/benches/programs/pinocchio/: Cargo.toml
benches/program-bench/benches/programs/pinocchio/src/: entrypoint.rs  processor.rs
benches/program-bench/benches/programs/quasar/: Cargo.toml
benches/program-bench/benches/programs/quasar/src/: lib.rs
benches/program-bench/benches/programs/star-frame/: Cargo.toml
benches/program-bench/benches/programs/typhoon/: Cargo.toml
benches/program-bench/benches/programs/typhoon/src/: lib.rs
benches/program-bench/src/: lib.rs
book/src/: SUMMARY.md  crates_overview.md  events.md
crates/account-macro/: Cargo.toml
crates/account-macro/src/: lib.rs
crates/account-macro/tests/account_attribute/: struct.pass.rs
crates/accounts/src/: lib.rs
crates/accounts/src/accounts/: account.rs  mutable.rs  program.rs  signer.rs  system.rs  unchecked.rs
crates/cli/src/: add.rs  templates.rs
crates/cli/templates/: Cargo.toml.template
crates/cli/templates/programs/src/: lib.rs.template
crates/cli/templates/programs/src/handlers/: close.rs.template  increment.rs.template
crates/cli/tests/: add.rs
crates/context/: Cargo.toml
crates/context-macro/src/: lib.rs
crates/context-macro/src/generators/: account.rs
crates/context-macro/src/injector/: lifetime.rs
crates/context-macro/tests/constraints/: init.pass.rs  init_seeds_keys.fail.rs  invalid_seeds_syntax.fail.rs  invalid_token_variant.fail.rs  mint_constraints.pass.rs  missing_associated_token_pogram.fail.rs  missing_system_program.fail.rs  missing_token_pogram.fail.rs  seeded.pass.rs  seeds.pass.rs  seeds_keys.fail.rs
crates/context/src/: arg.rs  array.rs  entrypoint.rs  iterator.rs  lib.rs  program_id.rs  remaining_accounts.rs
crates/cpi-generator/src/anchor/: instruction.rs  type.rs
crates/errors/src/: error_code.rs  lib.rs
crates/event-macro/: Cargo.toml
crates/event-macro/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/idl-generator/src/: lib.rs  plugin.rs
crates/idl-generator/src/visitors/: context_visitor.rs  instruction_resolver.rs  mod.rs  set_account_visitor.rs  set_errors_visitor.rs  set_event_visitor.rs
crates/idl-generator/tests/: idl.rs
crates/idl-generator/tests/crate/src/: lib.rs
crates/instruction-builder/src/: mod_path.rs
crates/instruction-builder/src/generator/: client.rs  cpi.rs  mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/program-id-macro/src/: lib.rs
crates/syn/src/: account.rs  doc.rs  instruction.rs
crates/token/src/: lib.rs
crates/token/src/traits/: create_account.rs  create_mint.rs
crates/utility/: Cargo.toml
crates/utility-traits/src/: close.rs  create.rs  lamport.rs  system.rs
crates/utility/src/: create_account.rs
examples/anchor-cpi/programs/hand/src/: lib.rs
examples/anchor-cpi/tests/: Cargo.toml
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/cpi/: Cargo.toml
examples/cpi/programs/hand/src/: lib.rs
examples/cpi/programs/lever/src/: lib.rs
examples/escrow/: Cargo.toml
examples/escrow/programs/escrow/: Cargo.toml
examples/escrow/programs/escrow/src/: lib.rs
examples/escrow/programs/escrow/src/instructions/: make.rs  refund.rs  take.rs
examples/events/: Cargo.toml  build.rs
examples/events/src/: lib.rs
examples/events/tests/: integration.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/instruction-data/: Cargo.toml
examples/instruction-data/src/: lib.rs
examples/misc/: Cargo.toml
examples/misc/program/src/: lib.rs
examples/misc/program/src/intructions/: initialize.rs
examples/seeded/: Cargo.toml
examples/seeded/src/: lib.rs
examples/seeds/: Cargo.toml
examples/seeds/src/: lib.rs
examples/transfer-sol/: Cargo.toml
examples/transfer-sol/src/: lib.rs
examples/transfer-token/: Cargo.toml
examples/transfer-token/src/: lib.rs
scripts/: deploy-crates.sh  run-benchmarks.sh
