[package]
name = "program-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "bench"
harness = false

[dependencies]
litesvm = "0.14.0"
serde = "1.0"
solana-address = "2.6"
solana-hash = "4.1"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-signer = "3.0"
solana-system-interface = "3.2"
solana-transaction = "4.1"

[dev-dependencies]
serde_json = "1.0"
