[package]
name = "typhoon-event-macro"
description = "Procedural macro for defining events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn = { workspace = true, features = ["full"] }
