[workspace]
members = ["programs/*", "interfaces/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.23"
escrow-interface = { path = "interfaces/escrow" }
litesvm = "0.14.0"
solana-address = "2.2"
solana-instruction = "3.4"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-signer = "3.0"
solana-system-interface = "3.2.0"
solana-transaction = "4.1"
typhoon = { path = "../../crates/lib" }
typhoon-idl-generator = { path = "../../crates/idl-generator" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }
typhoon-token = { path = "../../crates/token" }

[profile.release]
lto = true
codegen-units = 1
