[workspace]
members = ["program", "interface"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.24"
const-crypto = "0.3.0"
litesvm = "0.14.0"
misc-interface = { path = "interface" }
solana-address = "2.2"
solana-instruction = "3.4"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-program-log = "1.1.0"
solana-transaction = "4.1"
typhoon = { path = "../../crates/lib" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }
