[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
bytemuck = "1.23"
litesvm = "0.14.0"
typhoon = { path = "../../../crates/lib" }
solana-address = "2.2"
solana-instruction = "3.4"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-nostd-sha256 = "0.1.3"
solana-signer = "3.0"
solana-system-interface = "3.2.0"
solana-transaction = "4.1"
typhoon-instruction-builder = { path = "../../../crates/instruction-builder" }

[package.metadata.typhoon.builder-dependencies]
hand = { path = "../programs/hand" }
