[package]
name = "pinocchio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
pinocchio = "0.11.2"
pinocchio-system = "0.6.1"
solana-program-log = "1.2.0"
